Fix text-overflow on buttons

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -12,6 +12,11 @@
     padding: 0 ($euiSize - $euiSizeXS);
   }
 
+  .euiButton__text {
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
   &.euiButton--small {
     height: $euiButtonHeightSmall;
   }
